--- a/assets/styles/layouts/_pages.scss
+++ b/assets/styles/layouts/_pages.scss
@@ -770,6 +770,56 @@
   text-align: center;
   margin-bottom: 40px;
 }
+.trekkspill{
+  display: inline-block;
+  width: 45%;
+  width: calc(50% - 20px);
+  margin: 0 10px;
+  vertical-align: top;
+  &__holder{
+    font-size: 0;
+    margin: 0 -10px;
+  }
+  &__enkelt{
+    background: $gronn;
+    margin-bottom: 20px;
+    h3{
+      padding: 10px;
+      margin: 0;
+      color: #fff;
+      font-size: 20px;
+      cursor: pointer;
+    }
+    &__innhold{
+      background: #fff;
+      box-sizing: border-box;
+      border: 2px solid $gronn;
+      overflow: hidden;
+      max-height: 0;
+      transition: .6s all ease-in-out;
+    }
+    &:hover,
+    &--aktiv{
+      .trekkspill__enkelt{
+        &__innhold{
+          max-height: 1000px;
+        }
+      }
+    }
+    &__bg{
+      width: 100%;
+      img{
+        width: 100%;
+        height: auto;
+      }
+    }
+    &__tekst{
+      padding: 15px;
+      font-size: 16px;
+      line-height: 22px;
+    }
+  }
+}
 /*
  * WP Classes
  */
