Komitesider lagt til

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -13,5 +13,6 @@
 @import "layouts/sidebar";
 @import "layouts/footer";
 @import "layouts/pages";
+@import "layouts/wikiside";
 @import "layouts/posts";
 @import "layouts/tinymce";
